@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-01-25T12:13:24Z",
+  "timestamp" : "2025-01-29T12:15:38Z",
   "count_outdated" : 2912,
   "uniques_outdated" : 942,
-  "count" : 2924,
-  "uniques" : 944,
+  "count" : 2925,
+  "uniques" : 945,
   "views" : [
     {
       "timestamp": "2025-01-19T00:00:00Z",
@@ -19,6 +19,15 @@
       "count": 11,
       "count_minmax": [ 11, 11 ],
       "count_decinc": [ 0, 11 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-01-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
