@@ -1,6 +1,6 @@
 {
-  "count": 12,
-  "uniques": 2,
+  "count": 13,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2025-01-19T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2025-01-24T00:00:00Z",
       "count": 11,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-01-29T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
