@@ -1,3 +1,12 @@
+2025-01-29T12:15:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13031091025 # 788
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-29
+* notice: last 14d: unq all: 3 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 942 2912 / 944 2924
+* notice: next accum: outdated-unq outdated-all / unq all: 942 2912 / 945 2925
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-01-29]
+
 2025-01-25T12:13:24Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12964803105 # 780
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-25
